syntax = "proto3";

package example.v1;

import "validate/validate.proto";

option go_package = "github.com/krl4k/api/grpc/user/v1;userv1";

message User {
  string email = 1 [(validate.rules).string = {
    email: true
  }];
  string name = 2 [(validate.rules).string = {
    min_len: 3,
    max_len: 50
  }];
  int32 age = 3 [(validate.rules).int32 = {
    gte: 0,
    lte: 150
  }];
}

service UserService {
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
}

message CreateUserRequest {
  User user = 1;
}

message CreateUserResponse {
  string id = 1;
}